--- a/composer.json
+++ b/composer.json
@@ -27,7 +27,8 @@
         "guzzlehttp/guzzle": "^7.4"
     },
     "require-dev": {
-        "phpunit/phpunit": "^9.3"
+        "phpunit/phpunit": "^9.3",
+        "orchestra/testbench": "^7"
     },
     "autoload": {
         "psr-4": {
