--- a/composer.json
+++ b/composer.json
@@ -22,12 +22,12 @@
     "require": {
         "php": ">=7.4",
         "ext-curl": "*",
-        "laravel/framework": "^8.50|^9.0",
+        "laravel/framework": "^8.50|^9.0|^10.0",
         "nesbot/carbon": "^2.0",
         "guzzlehttp/guzzle": "^7.4"
     },
     "require-dev": {
-        "phpunit/phpunit": "^9.3",
+        "phpunit/phpunit": "^9.3|^10.0",
         "orchestra/testbench": "^7"
     },
     "autoload": {
